@@ -29,7 +29,6 @@
 package org.opennms.minion.heartbeat.consumer;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.Date;
 import java.util.List;
 import java.util.Objects;
@@ -55,10 +54,13 @@ import org.opennms.netmgt.events.api.EventProxyException;
 import org.opennms.netmgt.events.api.EventSubscriptionService;
 import org.opennms.netmgt.model.OnmsMonitoringSystem;
 import org.opennms.netmgt.model.OnmsNode;
+import org.opennms.netmgt.model.PrimaryType;
 import org.opennms.netmgt.model.events.EventBuilder;
 import org.opennms.netmgt.model.minion.OnmsMinion;
 import org.opennms.netmgt.provision.persist.ForeignSourceRepository;
 import org.opennms.netmgt.provision.persist.foreignsource.ForeignSource;
+import org.opennms.netmgt.provision.persist.foreignsource.PluginConfig;
+import org.opennms.netmgt.provision.persist.policies.MatchingIpInterfacePolicy;
 import org.opennms.netmgt.provision.persist.requisition.Requisition;
 import org.opennms.netmgt.provision.persist.requisition.RequisitionInterface;
 import org.opennms.netmgt.provision.persist.requisition.RequisitionMonitoredService;
@@ -89,6 +91,10 @@ public class HeartbeatConsumer implements MessageConsumer<MinionIdentityDTO, Min
      * Services on the Minion nodes must be associated to *some* interface, so we use the following constant:
      */
     private static final String MINION_INTERFACE = "127.0.0.1";
+
+    private static String DEFAULT_SNMP_POLICY = "Minion-SNMP-Policy";
+
+    private static String DEFAULT_SNMP_DETECTOR = "SNMP";
 
     private static final HeartbeatModule heartbeatModule = new HeartbeatModule();
 
@@ -126,7 +132,7 @@ public class HeartbeatConsumer implements MessageConsumer<MinionIdentityDTO, Min
     @Transactional
     public void handleMessage(MinionIdentityDTO minionHandle) {
         LOG.info("Received heartbeat for Minion with id: {} at location: {}",
-                 minionHandle.getId(), minionHandle.getLocation());
+                minionHandle.getId(), minionHandle.getLocation());
 
         OnmsMinion minion = minionDao.findById(minionHandle.getId());
         if (minion == null) {
@@ -136,6 +142,11 @@ public class HeartbeatConsumer implements MessageConsumer<MinionIdentityDTO, Min
             // The real location is filled in below, but we set this to null
             // for now to detect requisition changes
             minion.setLocation(null);
+        }
+
+        if (!Objects.isNull(minionHandle.getVersion()) &&
+                (Objects.isNull(minion.getVersion()) || !minion.getVersion().equals(minionHandle.getVersion()))) {
+            minion.setVersion(minionHandle.getVersion());
         }
 
         final String prevLocation = minion.getLocation();
@@ -216,15 +227,29 @@ public class HeartbeatConsumer implements MessageConsumer<MinionIdentityDTO, Min
             return;
         }
 
+        final String prevForeignSource = String.format(PROVISIONING_FOREIGN_SOURCE_PATTERN, prevLocation);
+        final String nextForeignSource = String.format(PROVISIONING_FOREIGN_SOURCE_PATTERN, nextLocation);
+
+        PluginConfig policy = new PluginConfig(DEFAULT_SNMP_POLICY, "org.opennms.netmgt.provision.persist.policies.MatchingSnmpInterfacePolicy");
+        policy.addParameter("ifDescr", "~^docker.*$");
+        policy.addParameter("action", "DO_NOT_PERSIST");
+        policy.addParameter("matchBehavior", "ALL_PARAMETERS");
+
+        PluginConfig detector = new PluginConfig(DEFAULT_SNMP_DETECTOR, "org.opennms.netmgt.provision.detector.snmp.SnmpDetector");
+
         // Return if minion with this foreignId and location already exists.
         String foreignId = minion.getLabel() != null ? minion.getLabel() : minion.getId();
         List<OnmsNode> nodes = nodeDao.findByForeignIdForLocation(foreignId, nextLocation);
         if (!nodes.isEmpty()) {
+            //check for existing requisitions the policy and detectors are in place
+            final ForeignSource foreignSource = deployedForeignSourceRepository.getForeignSource(prevForeignSource);
+            if (foreignSource.getPolicy(DEFAULT_SNMP_POLICY) == null || foreignSource.getDetector(DEFAULT_SNMP_DETECTOR) == null) {
+                foreignSource.addPolicy(policy);
+                foreignSource.addDetector(detector);
+                deployedForeignSourceRepository.save(foreignSource);
+            }
             return;
         }
-
-        final String prevForeignSource = String.format(PROVISIONING_FOREIGN_SOURCE_PATTERN, prevLocation);
-        final String nextForeignSource = String.format(PROVISIONING_FOREIGN_SOURCE_PATTERN, nextLocation);
 
         final Set<String> alteredForeignSources = Sets.newHashSet();
 
@@ -243,6 +268,17 @@ public class HeartbeatConsumer implements MessageConsumer<MinionIdentityDTO, Min
         }
 
         Requisition nextRequisition = deployedForeignSourceRepository.getRequisition(nextForeignSource);
+        // check that existing foreignId requisition have detectors and policies in place
+        if (nextRequisition != null) {
+            final ForeignSource foreignSource = deployedForeignSourceRepository.getForeignSource(nextForeignSource);
+            if (foreignSource.getPolicy(DEFAULT_SNMP_POLICY) == null || foreignSource.getDetector(DEFAULT_SNMP_DETECTOR) == null) {
+                foreignSource.addPolicy(policy);
+                foreignSource.addDetector(detector);
+                deployedForeignSourceRepository.save(foreignSource);
+
+                alteredForeignSources.add(nextForeignSource);
+            }
+        }
         if (nextRequisition == null) {
             nextRequisition = new Requisition(nextForeignSource);
             nextRequisition.updateDateStamp();
@@ -250,10 +286,12 @@ public class HeartbeatConsumer implements MessageConsumer<MinionIdentityDTO, Min
             // We have to save the requisition before we can alter the according foreign source definition
             deployedForeignSourceRepository.save(nextRequisition);
 
-            // Remove all policies and detectors from the foreign source
+            // Remove and replace all policies and detectors from the foreign source with defaults
+            // Default Snmp detector and policy for appliances
             final ForeignSource foreignSource = deployedForeignSourceRepository.getForeignSource(nextForeignSource);
-            foreignSource.setDetectors(Collections.emptyList());
-            foreignSource.setPolicies(Collections.emptyList());
+            foreignSource.setDetectors(List.of(detector));
+            foreignSource.setPolicies(List.of(policy));
+
             deployedForeignSourceRepository.save(foreignSource);
 
             alteredForeignSources.add(nextForeignSource);
@@ -263,6 +301,7 @@ public class HeartbeatConsumer implements MessageConsumer<MinionIdentityDTO, Min
         if (requisitionNode == null) {
             final RequisitionInterface requisitionInterface = new RequisitionInterface();
             requisitionInterface.setIpAddr(MINION_INTERFACE);
+            requisitionInterface.setSnmpPrimary(PrimaryType.PRIMARY);
             ensureServicesAreOnInterface(requisitionInterface);
 
             requisitionNode = new RequisitionNode();
@@ -279,7 +318,7 @@ public class HeartbeatConsumer implements MessageConsumer<MinionIdentityDTO, Min
             alteredForeignSources.add(nextForeignSource);
         } else {
             // Change location in requisition.
-            if(!prevLocation.equals(nextLocation)) {
+            if (!prevLocation.equals(nextLocation)) {
                 requisitionNode.setLocation(nextLocation);
             }
             // The node already exists in the requisition
